# mirscribe

./: .gitignore  README.md  main_script.py  main_script_debug.py  main_script_vcf.py  main_script_vcf_test.py  pyproject.toml  readme.md  scratchpad.ipynb
WIP/: truba_script.ipynb  truba_script.py
data/: README.md
data/clash/: preprocess_clash.ipynb  readme.md
data/fasta/: README.md
data/mirna/: process_mirnas.ipynb  readme.md
data/mirna_coordinates/: preprocess_mirna_coordinates.ipynb  readme.md
data/ta_sps/: preprocess_ta_sps.ipynb
executables/: process_vcf.py  process_vcf_multithreaded.py
hibit23/: case_study.md
models/: model_with_no_close_proximity.json
scripts/: ensembl.py  features.py  globals.py  main_helpers.py  utils.py
scripts/1_xgboost_train/: 1_find_matches_for_clash.ipynb  2_generate_positive_data.ipynb  3_generate_negative_data.ipynb  4_merge_data.ipynb  5_generate_features.ipynb  6_xgb.ipynb
scripts/2_vcf_pipeline/: 1_preproces_vcf_for_case_types.ipynb  1_preprocess_vcf.ipynb
scripts/convert_coordinates_pipeline/: convert_grch38_mirnas_to_grch37.ipynb
scripts/sana_pipeline/: 1_preprocess_data.ipynb  2_sana_truba_script.py  3_explore_results.ipynb  3_process_results.ipynb  4_explore_gains_and_losses.ipynb  5_add_gsea.ipynb
scripts/truba_results_pipeline/: 1_process_results.ipynb  2_explore_results.ipynb
scripts/vcf_pipeline/: 1_preprocess_vcf.ipynb
scripts/xgb_pipeline/: 1_find_matches_for_clash.ipynb  2_generate_positive_data.ipynb  3_generate_negative_data.ipynb  4_merge_data.ipynb  5_generate_features.ipynb  6_xgb.ipynb
(+3 files in other folders)
