[tool.poetry]
name = "mirscribe"
version = "0.1.0"
description = ""
authors = ["TasbasMN <nazifts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
editdistance = "^0.6.2"
pandas = "^2.1.1"
pyensembl = "^2.2.9"
diff-match-patch = "^20230430"
matplotlib = "3.7.1"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
