[tool.poetry]
name = "mirscribe"
version = "0.1.0"
description = ""
authors = ["Nazif <nazifts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
editdistance = "^0.8.1"
pandas = "^2.2.2"
pyensembl = "^2.3.12"
diff-match-patch = "^20230430"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
xgboost = "^2.0.3"
scikit-learn = "^1.4.2"
tqdm = "^4.66.2"
psutil = "^5.9.8"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
snakeviz = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
